--- a/run.env
+++ b/run.env
@@ -3,7 +3,7 @@ DR_WORLD_NAME=2022_reinvent_champ
 DR_RACE_TYPE=TIME_TRIAL
 DR_CAR_NAME=FastCar
 DR_CAR_BODY_SHELL_TYPE=deepracer
-DR_CAR_COLOR=Blue
+DR_CAR_COLOR=Red
 DR_DISPLAY_NAME=$DR_CAR_NAME
 DR_RACER_NAME=$DR_CAR_NAME
 DR_ENABLE_DOMAIN_RANDOMIZATION=False
@@ -33,9 +33,9 @@ DR_TRAIN_MIN_EVAL_TRIALS=5
 DR_TRAIN_BEST_MODEL_METRIC=progress
 #DR_TRAIN_RTF=1.0
 #DR_TRAIN_MAX_STEPS_PER_ITERATION=10000
-DR_LOCAL_S3_MODEL_PREFIX=Experiment3
+DR_LOCAL_S3_MODEL_PREFIX=Test-8
 DR_LOCAL_S3_PRETRAINED=True
-DR_LOCAL_S3_PRETRAINED_PREFIX=Experiment2
+DR_LOCAL_S3_PRETRAINED_PREFIX=Test-7
 DR_LOCAL_S3_PRETRAINED_CHECKPOINT=last
 DR_LOCAL_S3_CUSTOM_FILES_PREFIX=custom_files
 DR_LOCAL_S3_TRAINING_PARAMS_FILE=training_params.yaml
